feat: webcam detection + filter

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,376 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rec: 7 0\n",
-      "Matt_LeBlanc_3 :\n",
-      "\n",
-      "tp:  67  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  60  fp:  0 fn:  7\n",
-      "Precision:  1.0\n",
-      "Recall:  0.9\n",
-      "F1:  0.94\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  67  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  60  fp:  0 fn:  7\n",
-      "Precision:  1.0\n",
-      "Recall:  0.9\n",
-      "F1:  0.94\n",
-      "\n",
-      "Nancy_Kerrigan_4 :\n",
-      "\n",
-      "tp:  58  fp:  0 fn:  1\n",
-      "Precision:  1.0\n",
-      "Recall:  0.98\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  58  fp:  0 fn:  1\n",
-      "Precision:  1.0\n",
-      "Recall:  0.98\n",
-      "F1:  0.99\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  58  fp:  0 fn:  1\n",
-      "Precision:  1.0\n",
-      "Recall:  0.98\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  58  fp:  0 fn:  1\n",
-      "Precision:  1.0\n",
-      "Recall:  0.98\n",
-      "F1:  0.99\n",
-      "\n",
-      "rec: 109 7\n",
-      "Narendra_Modi_3 :\n",
-      "\n",
-      "tp:  107  fp:  0 fn:  4\n",
-      "Precision:  1.0\n",
-      "Recall:  0.96\n",
-      "F1:  0.98\n",
-      "\n",
-      "tp:  2  fp:  0 fn:  109\n",
-      "Precision:  1.0\n",
-      "Recall:  0.02\n",
-      "F1:  0.04\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  107  fp:  0 fn:  4\n",
-      "Precision:  1.0\n",
-      "Recall:  0.96\n",
-      "F1:  0.98\n",
-      "\n",
-      "tp:  2  fp:  0 fn:  109\n",
-      "Precision:  1.0\n",
-      "Recall:  0.02\n",
-      "F1:  0.04\n",
-      "\n",
-      "Natalia_Vodonova_1 :\n",
-      "\n",
-      "tp:  43  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  43  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  43  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  43  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Natalie_Imbruglia_1 :\n",
-      "\n",
-      "tp:  71  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  71  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  71  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  71  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "prec:  1 0\n",
-      "Nick_Markakis_3 :\n",
-      "\n",
-      "tp:  56  fp:  1 fn:  2\n",
-      "Precision:  0.98\n",
-      "Recall:  0.97\n",
-      "F1:  0.97\n",
-      "\n",
-      "tp:  57  fp:  0 fn:  2\n",
-      "Precision:  1.0\n",
-      "Recall:  0.97\n",
-      "F1:  0.98\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  56  fp:  1 fn:  2\n",
-      "Precision:  0.98\n",
-      "Recall:  0.97\n",
-      "F1:  0.97\n",
-      "\n",
-      "tp:  57  fp:  0 fn:  2\n",
-      "Precision:  1.0\n",
-      "Recall:  0.97\n",
-      "F1:  0.98\n",
-      "\n",
-      "Nicolas_Eyzaguirre_0 :\n",
-      "\n",
-      "tp:  125  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  125  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  125  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  125  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Norah_Jones_5 :\n",
-      "\n",
-      "tp:  59  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  59  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  59  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  59  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Norman_Mineta_3 :\n",
-      "\n",
-      "tp:  51  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  51  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  51  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  51  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Nursultan_Nazarbayev_1 :\n",
-      "\n",
-      "tp:  63  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  63  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  63  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  63  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Olene_Walker_1 :\n",
-      "\n",
-      "tp:  102  fp:  1 fn:  1\n",
-      "Precision:  0.99\n",
-      "Recall:  0.99\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  104  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  102  fp:  1 fn:  1\n",
-      "Precision:  0.99\n",
-      "Recall:  0.99\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  104  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Ornella_Muti_0 :\n",
-      "\n",
-      "tp:  51  fp:  1 fn:  0\n",
-      "Precision:  0.98\n",
-      "Recall:  1.0\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  42  fp:  0 fn:  10\n",
-      "Precision:  1.0\n",
-      "Recall:  0.81\n",
-      "F1:  0.89\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  51  fp:  1 fn:  0\n",
-      "Precision:  0.98\n",
-      "Recall:  1.0\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  42  fp:  0 fn:  10\n",
-      "Precision:  1.0\n",
-      "Recall:  0.81\n",
-      "F1:  0.89\n",
-      "\n",
-      "Otto_Reich_1 :\n",
-      "\n",
-      "tp:  55  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  55  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  55  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  55  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Otto_Reich_4 :\n",
-      "\n",
-      "tp:  239  fp:  1 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  240  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Modified:\n",
-      "\n",
-      "tp:  239  fp:  1 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "tp:  240  fp:  0 fn:  0\n",
-      "Precision:  1.0\n",
-      "Recall:  1.0\n",
-      "F1:  1.0\n",
-      "\n",
-      "Result for entire database:\n",
-      "tp:  1147  fp:  4 fn:  8\n",
-      "Precision:  1.0\n",
-      "Recall:  0.99\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  1030  fp:  0 fn:  129\n",
-      "Precision:  1.0\n",
-      "Recall:  0.89\n",
-      "F1:  0.94\n",
-      "\n",
-      "Result for entire database (modified): \n",
-      "tp:  1147  fp:  4 fn:  8\n",
-      "Precision:  1.0\n",
-      "Recall:  0.99\n",
-      "F1:  0.99\n",
-      "\n",
-      "tp:  1030  fp:  0 fn:  129\n",
-      "Precision:  1.0\n",
-      "Recall:  0.89\n",
-      "F1:  0.94\n",
-      "\n",
-      "Lowest recall:  Nick_Markakis_3\n",
-      "Lowest precission:  Narendra_Modi_3\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 139\u001b[0m\n\u001b[0;32m    137\u001b[0m x1b, y1b, x2b, y2b \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m    138\u001b[0m \u001b[39m#DLIB blurred\u001b[39;00m\n\u001b[1;32m--> 139\u001b[0m faces4 \u001b[39m=\u001b[39m detector(gray4)\n\u001b[0;32m    140\u001b[0m \u001b[39mfor\u001b[39;00m face \u001b[39min\u001b[39;00m faces4:\n\u001b[0;32m    141\u001b[0m     landmarks \u001b[39m=\u001b[39m predictor(gray4, face)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -537,6 +179,7 @@
     "        x, y, x, y = -1, -1, -1, -1\n",
     "        for (x, y, w, h) in faces1:\n",
     "            cv2.rectangle(img1, (x, y), (x + w, y + h), (255, 255, 0), 2)\n",
+    "            break\n",
     "\n",
     "\n",
     "        #Cascade Classifier Blurred\n",
@@ -551,6 +194,7 @@
     "        xb, yb, xb, yb = -1, -1, -1, -1\n",
     "        for (xb, yb, wb, hb) in faces3:\n",
     "            cv2.rectangle(img3, (xb, yb), (xb + wb, yb + hb), (255, 255, 0), 2)\n",
+    "            break\n",
     "\n",
     "\n",
     "        x1, y1, x2, y2 = -1, -1, -1, -1\n",
@@ -561,6 +205,7 @@
     "            x1, y1 = face.left(), face.top()\n",
     "            x2, y2 = face.right(), face.bottom()\n",
     "            cv2.rectangle(img2, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "            break\n",
     "\n",
     "\n",
     "        x1b, y1b, x2b, y2b = -1, -1, -1, -1\n",
@@ -571,6 +216,7 @@
     "            x1b, y1b = face.left(), face.top()\n",
     "            x2b, y2b = face.right(), face.bottom()\n",
     "            cv2.rectangle(img4, (x1b, y1b), (x2b, y2b), (0, 255, 0), 2)\n",
+    "            break\n",
     "        \n",
     "\n",
     "        bb = boundingBox[:, :, i]\n",
@@ -685,6 +331,69 @@
     "results(tp4, fp4, fn4)\n",
     "print(\"Lowest recall: \", prec)\n",
     "print(\"Lowest precission: \", rec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Borrowed from https://github.com/Spidy20/Insta_flters_with_python/blob/master/put_hat%26glass.py\n",
+    "def put_mustas(mustas, img, x, y, w, h):\n",
+    "    face_width = w\n",
+    "    face_height = h\n",
+    "    mustas_width = face_width + 1\n",
+    "    mustas_height = int(0.25 * face_height) + 1\n",
+    "    mustas = cv2.resize(mustas, (mustas_width, mustas_height))\n",
+    "\n",
+    "    for i in range(mustas_height):\n",
+    "        for j in range(mustas_width):\n",
+    "            for k in range(3):\n",
+    "                if mustas[i][j][k] < 235:\n",
+    "                    img[y + i - int(-0.6 * face_height)][x + j][k] = mustas[i][j][k] * (mustas[i][j][3]/255) + img[y + i - int(-0.6 * face_height)][x + j][k] * (1 - mustas[i][j][3]/255)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib\n",
+    "import cv2\n",
+    "cascade_path = pathlib.Path(cv2.__file__).parent.absolute() / \"data/haarcascade_frontalface_default.xml\"\n",
+    "clf = cv2.CascadeClassifier(str(cascade_path))\n",
+    "\n",
+    "imgname = \"./mustas.png\"\n",
+    "image = cv2.imread(imgname, cv2.IMREAD_UNCHANGED)\n",
+    "\n",
+    "# Borrowed from: https://www.youtube.com/watch?v=5cg_yggtkso&ab_channel=NeuralNine\n",
+    "camera = cv2.VideoCapture(0)\n",
+    "\n",
+    "while True:\n",
+    "    _, frame = camera.read()\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    faces = clf.detectMultiScale(\n",
+    "        gray, \n",
+    "        scaleFactor = 1.1,\n",
+    "        minNeighbors = 10,\n",
+    "        minSize = (100, 100),\n",
+    "        flags = cv2.CASCADE_SCALE_IMAGE\n",
+    "    )\n",
+    "\n",
+    "    for(x, y, w, h) in faces:\n",
+    "        frame = put_mustas(image, frame, x, y, w, h)\n",
+    "        cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 255, 0), 2)\n",
+    "    \n",
+    "    cv2.imshow(\"Face\", frame)\n",
+    "    c = cv2.waitKey(1)\n",
+    "    if c == 27:\n",
+    "        break\n",
+    "\n",
+    "camera.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
