--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +56,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 139\u001b[0m\n\u001b[0;32m    137\u001b[0m x1b, y1b, x2b, y2b \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m    138\u001b[0m \u001b[39m#DLIB blurred\u001b[39;00m\n\u001b[1;32m--> 139\u001b[0m faces4 \u001b[39m=\u001b[39m detector(gray4)\n\u001b[0;32m    140\u001b[0m \u001b[39mfor\u001b[39;00m face \u001b[39min\u001b[39;00m faces4:\n\u001b[0;32m    141\u001b[0m     landmarks \u001b[39m=\u001b[39m predictor(gray4, face)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matt_LeBlanc_3 :\n",
+      "\n",
+      "tp:  67  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  60  fp:  0 fn:  7\n",
+      "Precision:  1.0\n",
+      "Recall:  0.9\n",
+      "F1:  0.94\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  67  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  60  fp:  0 fn:  7\n",
+      "Precision:  1.0\n",
+      "Recall:  0.9\n",
+      "F1:  0.94\n",
+      "\n",
+      "Nancy_Kerrigan_4 :\n",
+      "\n",
+      "tp:  53  fp:  0 fn:  6\n",
+      "Precision:  1.0\n",
+      "Recall:  0.9\n",
+      "F1:  0.95\n",
+      "\n",
+      "tp:  58  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.98\n",
+      "F1:  0.99\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  53  fp:  0 fn:  6\n",
+      "Precision:  1.0\n",
+      "Recall:  0.9\n",
+      "F1:  0.95\n",
+      "\n",
+      "tp:  58  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.98\n",
+      "F1:  0.99\n",
+      "\n",
+      "Narendra_Modi_3 :\n",
+      "\n",
+      "tp:  72  fp:  0 fn:  39\n",
+      "Precision:  1.0\n",
+      "Recall:  0.65\n",
+      "F1:  0.79\n",
+      "\n",
+      "tp:  2  fp:  0 fn:  109\n",
+      "Precision:  1.0\n",
+      "Recall:  0.02\n",
+      "F1:  0.04\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  72  fp:  0 fn:  39\n",
+      "Precision:  1.0\n",
+      "Recall:  0.65\n",
+      "F1:  0.79\n",
+      "\n",
+      "tp:  2  fp:  0 fn:  109\n",
+      "Precision:  1.0\n",
+      "Recall:  0.02\n",
+      "F1:  0.04\n",
+      "\n",
+      "Natalia_Vodonova_1 :\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Natalie_Imbruglia_1 :\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Nick_Markakis_3 :\n",
+      "\n",
+      "tp:  57  fp:  1 fn:  1\n",
+      "Precision:  0.98\n",
+      "Recall:  0.98\n",
+      "F1:  0.98\n",
+      "\n",
+      "tp:  57  fp:  0 fn:  2\n",
+      "Precision:  1.0\n",
+      "Recall:  0.97\n",
+      "F1:  0.98\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  57  fp:  1 fn:  1\n",
+      "Precision:  0.98\n",
+      "Recall:  0.98\n",
+      "F1:  0.98\n",
+      "\n",
+      "tp:  57  fp:  0 fn:  2\n",
+      "Precision:  1.0\n",
+      "Recall:  0.97\n",
+      "F1:  0.98\n",
+      "\n",
+      "Nicolas_Eyzaguirre_0 :\n",
+      "\n",
+      "tp:  124  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.99\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  125  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  124  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.99\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  125  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Norah_Jones_5 :\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Norman_Mineta_3 :\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Nursultan_Nazarbayev_1 :\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Olene_Walker_1 :\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  49\n",
+      "Precision:  1.0\n",
+      "Recall:  0.53\n",
+      "F1:  0.69\n",
+      "\n",
+      "tp:  104  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  49\n",
+      "Precision:  1.0\n",
+      "Recall:  0.53\n",
+      "F1:  0.69\n",
+      "\n",
+      "tp:  104  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Ornella_Muti_0 :\n",
+      "\n",
+      "tp:  52  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  42  fp:  0 fn:  10\n",
+      "Precision:  1.0\n",
+      "Recall:  0.81\n",
+      "F1:  0.89\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  52  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  42  fp:  0 fn:  10\n",
+      "Precision:  1.0\n",
+      "Recall:  0.81\n",
+      "F1:  0.89\n",
+      "\n",
+      "Otto_Reich_1 :\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Otto_Reich_4 :\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Result for entire database:\n",
+      "tp:  1062  fp:  1 fn:  96\n",
+      "Precision:  1.0\n",
+      "Recall:  0.92\n",
+      "F1:  0.96\n",
+      "\n",
+      "tp:  1030  fp:  0 fn:  129\n",
+      "Precision:  1.0\n",
+      "Recall:  0.89\n",
+      "F1:  0.94\n",
+      "\n",
+      "Result for entire database (modified): \n",
+      "tp:  1062  fp:  1 fn:  96\n",
+      "Precision:  1.0\n",
+      "Recall:  0.92\n",
+      "F1:  0.96\n",
+      "\n",
+      "tp:  1030  fp:  0 fn:  129\n",
+      "Precision:  1.0\n",
+      "Recall:  0.89\n",
+      "F1:  0.94\n",
+      "\n",
+      "Lowest recall:  Nick_Markakis_3\n",
+      "Lowest precission:  Narendra_Modi_3\n"
      ]
     }
    ],
@@ -82,7 +437,7 @@
     "detector = dlib.get_frontal_face_detector()\n",
     "predictor = dlib.shape_predictor('./shape_predictor_68_face_landmarks.dat/shape_predictor_68_face_landmarks.dat')\n",
     "\n",
-    "cascade_path = pathlib.Path(cv2.__file__).parent.absolute() / \"data/haarcascade_frontalface_default.xml\"\n",
+    "cascade_path = pathlib.Path(cv2.__file__).parent.absolute() / \"data/haarcascade_frontalface_alt.xml\"\n",
     "clf = cv2.CascadeClassifier(str(cascade_path))\n",
     "\n",
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
@@ -179,6 +534,13 @@
     "        x, y, x, y = -1, -1, -1, -1\n",
     "        for (x, y, w, h) in faces1:\n",
     "            cv2.rectangle(img1, (x, y), (x + w, y + h), (255, 255, 0), 2)\n",
+    "            # detect landmarks (chatGPT helped me with this part)\n",
+    "            rect = dlib.rectangle(int(x), int(y), int(x + w), int(y + h))\n",
+    "            landmarks = predictor(gray, rect)\n",
+    "            for n in range(0, 68):\n",
+    "                p = landmarks.part(n).x\n",
+    "                q = landmarks.part(n).y\n",
+    "                cv2.circle(img1, (p, q), 1, (0, 0, 0), -1)\n",
     "            break\n",
     "\n",
     "\n",
@@ -194,6 +556,13 @@
     "        xb, yb, xb, yb = -1, -1, -1, -1\n",
     "        for (xb, yb, wb, hb) in faces3:\n",
     "            cv2.rectangle(img3, (xb, yb), (xb + wb, yb + hb), (255, 255, 0), 2)\n",
+    "            # detect landmarks (chatGPT helped me with this part)\n",
+    "            rect = dlib.rectangle(int(xb), int(yb), int(xb + wb), int(yb + hb))\n",
+    "            landmarks = predictor(gray, rect)\n",
+    "            for n in range(0, 68):\n",
+    "                p = landmarks.part(n).x\n",
+    "                q = landmarks.part(n).y\n",
+    "                cv2.circle(img3, (p, q), 1, (0, 0, 0), -1)\n",
     "            break\n",
     "\n",
     "\n",
@@ -202,6 +571,10 @@
     "        faces2 = detector(gray2)\n",
     "        for face in faces2:\n",
     "            landmarks = predictor(gray2, face)\n",
+    "            for n in range(0, 68):\n",
+    "                p = landmarks.part(n).x\n",
+    "                q = landmarks.part(n).y\n",
+    "                cv2.circle(img2, (p, q), 1, (0, 0, 0), 1)\n",
     "            x1, y1 = face.left(), face.top()\n",
     "            x2, y2 = face.right(), face.bottom()\n",
     "            cv2.rectangle(img2, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
@@ -213,6 +586,10 @@
     "        faces4 = detector(gray4)\n",
     "        for face in faces4:\n",
     "            landmarks = predictor(gray4, face)\n",
+    "            for n in range(0, 68):\n",
+    "                p = landmarks.part(n).x\n",
+    "                q = landmarks.part(n).y\n",
+    "                cv2.circle(img4, (p, q), 1, (0, 0, 0), 1)\n",
     "            x1b, y1b = face.left(), face.top()\n",
     "            x2b, y2b = face.right(), face.bottom()\n",
     "            cv2.rectangle(img4, (x1b, y1b), (x2b, y2b), (0, 255, 0), 2)\n",
@@ -335,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
