--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -854,10 +854,10 @@
       "\n",
       "Modified:\n",
       "\n",
-      "tp:  51  fp:  2 fn:  2\n",
-      "Precision:  0.96\n",
+      "tp:  52  fp:  1 fn:  2\n",
+      "Precision:  0.98\n",
       "Recall:  0.96\n",
-      "F1:  0.96\n",
+      "F1:  0.97\n",
       "\n",
       "tp:  52  fp:  1 fn:  2\n",
       "Precision:  0.98\n",
@@ -1418,10 +1418,10 @@
       "\n",
       "Nick_Nolte_5 :\n",
       "\n",
-      "tp:  56  fp:  3 fn:  0\n",
-      "Precision:  0.95\n",
+      "tp:  57  fp:  2 fn:  0\n",
+      "Precision:  0.97\n",
       "Recall:  1.0\n",
-      "F1:  0.97\n",
+      "F1:  0.98\n",
       "\n",
       "tp:  41  fp:  18 fn:  0\n",
       "Precision:  0.69\n",
@@ -1873,7 +1873,7 @@
       "F1:  1.0\n",
       "\n",
       "Result for entire database:\n",
-      "tp:  8443  fp:  10 fn:  258\n",
+      "tp:  8444  fp:  9 fn:  258\n",
       "Precision:  1.0\n",
       "Recall:  0.97\n",
       "F1:  0.98\n",
@@ -1884,7 +1884,7 @@
       "F1:  0.89\n",
       "\n",
       "Result for entire database (modified): \n",
-      "tp:  8445  fp:  8 fn:  258\n",
+      "tp:  8446  fp:  7 fn:  258\n",
       "Precision:  1.0\n",
       "Recall:  0.97\n",
       "F1:  0.98\n",
@@ -1905,6 +1905,7 @@
     "import numpy as np\n",
     "import pathlib\n",
     "import dlib\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# Load the face detection model\n",
     "detector = dlib.get_frontal_face_detector()\n",
@@ -1915,6 +1916,7 @@
     "\n",
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "position = (10, 10) # (x, y) coordinates of the text position\n",
+    "position2 = (10, 20) # (x, y) coordinates of the text position\n",
     "\n",
     "brightness = 200\n",
     "contrast = 150\n",
@@ -2010,9 +2012,11 @@
     "            # detect landmarks (chatGPT helped me with this part)\n",
     "            rect = dlib.rectangle(int(x), int(y), int(x + w), int(y + h))\n",
     "            landmarks = predictor(gray, rect)\n",
+    "            pred_values1 = []\n",
     "            for n in range(0, 68):\n",
     "                p = landmarks.part(n).x\n",
     "                q = landmarks.part(n).y\n",
+    "                pred_values1.append([p, q])\n",
     "                cv2.circle(img1, (p, q), 1, (0, 0, 0), -1)\n",
     "            break\n",
     "\n",
@@ -2032,9 +2036,11 @@
     "            # detect landmarks (chatGPT helped me with this part)\n",
     "            rect = dlib.rectangle(int(xb), int(yb), int(xb + wb), int(yb + hb))\n",
     "            landmarks = predictor(gray, rect)\n",
+    "            pred_values3 = []\n",
     "            for n in range(0, 68):\n",
     "                p = landmarks.part(n).x\n",
     "                q = landmarks.part(n).y\n",
+    "                pred_values3.append([p, q])\n",
     "                cv2.circle(img3, (p, q), 1, (0, 0, 0), -1)\n",
     "            break\n",
     "\n",
@@ -2044,9 +2050,11 @@
     "        faces2 = detector(gray2)\n",
     "        for face in faces2:\n",
     "            landmarks = predictor(gray2, face)\n",
+    "            pred_values2 = []\n",
     "            for n in range(0, 68):\n",
     "                p = landmarks.part(n).x\n",
     "                q = landmarks.part(n).y\n",
+    "                pred_values2.append([p, q])\n",
     "                cv2.circle(img2, (p, q), 1, (0, 0, 0), 1)\n",
     "            x1, y1 = face.left(), face.top()\n",
     "            x2, y2 = face.right(), face.bottom()\n",
@@ -2059,9 +2067,11 @@
     "        faces4 = detector(gray4)\n",
     "        for face in faces4:\n",
     "            landmarks = predictor(gray4, face)\n",
+    "            pred_values4 = []\n",
     "            for n in range(0, 68):\n",
     "                p = landmarks.part(n).x\n",
     "                q = landmarks.part(n).y\n",
+    "                pred_values4.append([p, q])\n",
     "                cv2.circle(img4, (p, q), 1, (0, 0, 0), 1)\n",
     "            x1b, y1b = face.left(), face.top()\n",
     "            x2b, y2b = face.right(), face.bottom()\n",
@@ -2070,7 +2080,9 @@
     "        \n",
     "\n",
     "        bb = boundingBox[:, :, i]\n",
+    "        true_values = []\n",
     "        for mark in landmarks2D[:, :, i]:\n",
+    "            true_values.append([int(mark[0]), int(mark[1])])\n",
     "            cv2.circle(img, (int(mark[0]), int(mark[1])), 1, (255, 255, 255))\n",
     "\n",
     "        bbox_true = [int(bb[0, 0]), int(bb[0, 1]), int(bb[3, 0]), int(bb[3, 1])]\n",
@@ -2079,7 +2091,6 @@
     "                        (int(bb[3, 0]), int(bb[3, 1])),\n",
     "                        (0, 0, 255), 1)\n",
     "        \n",
-    "\n",
     "        #IOU\n",
     "        if(x == -1):\n",
     "            fn += 1\n",
@@ -2087,8 +2098,12 @@
     "        else:\n",
     "            iou = get_iou(bbox_true, [x, y, x + w, y + h])\n",
     "            iou_str = f'CC IOU: {iou:.2f}'\n",
-    "            cv2.putText(img1, iou_str, position, font, 0.25, (255, 255, 0), 1, cv2.LINE_AA)\n",
+    "            cv2.putText(img1, iou_str, position, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            mse = mean_squared_error(true_values, pred_values1)\n",
+    "            mse_str = f'CC MSE: {mse:.2f}'\n",
+    "            cv2.putText(img1, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
     "            if(iou >= 0.5):\n",
     "                tp += 1\n",
@@ -2103,8 +2118,12 @@
     "        else:\n",
     "            iou = get_iou(bbox_true, [xb, yb, xb + wb, yb + hb])\n",
     "            iou_str = f'CC IOU: {iou:.2f}'\n",
-    "            cv2.putText(img3, iou_str, position, font, 0.25, (255, 255, 0), 1, cv2.LINE_AA)\n",
+    "            cv2.putText(img3, iou_str, position, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            mse = mean_squared_error(true_values, pred_values3)\n",
+    "            mse_str = f'CC MSE: {mse:.2f}'\n",
+    "            cv2.putText(img3, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
     "            if(iou >= 0.5):\n",
     "                tp3 += 1\n",
@@ -2120,8 +2139,12 @@
     "        else:\n",
     "            iou = get_iou(bbox_true, [x1, y1, x2, y2])\n",
     "            iou_str = f'DLIB IOU: {iou:.2f}'\n",
-    "            cv2.putText(img2, iou_str, position, font, 0.25, (0, 255, 0), 1, cv2.LINE_AA)\n",
+    "            cv2.putText(img2, iou_str, position, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            mse = mean_squared_error(true_values, pred_values2)\n",
+    "            mse_str = f'DLIB MSE: {mse:.2f}'\n",
+    "            cv2.putText(img2, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
     "            if(iou >= 0.5):\n",
     "                tp2 += 1\n",
@@ -2137,8 +2160,12 @@
     "        else:\n",
     "            iou = get_iou(bbox_true, [x1b, y1b, x2b, y2b])\n",
     "            iou_str = f'DLIB IOU: {iou:.2f}'\n",
-    "            cv2.putText(img4, iou_str, position, font, 0.25, (0, 255, 0), 1, cv2.LINE_AA)\n",
+    "            cv2.putText(img4, iou_str, position, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            mse = mean_squared_error(true_values, pred_values4)\n",
+    "            mse_str = f'DLIB MSE: {mse:.2f}'\n",
+    "            cv2.putText(img4, mse_str, position2, font, 0.25, (0, 0, 0), 1, cv2.LINE_AA)\n",
     "\n",
     "            if(iou >= 0.5):\n",
     "                tp4 += 1\n",
@@ -2185,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2207,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
