chore: add credits

--- a/faceAlignment.ipynb
+++ b/faceAlignment.ipynb
@@ -10,7 +10,9 @@
     "import numpy as np\n",
     "from PIL import Image\n",
     "import dlib\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "# Huge credit to this lovely person right here for writting majority of this code: https://github.com/HikkaV/Precise-face-alignment/blob/master/face_alignment.py"
    ]
   },
   {
